<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="#0033B5E5"
        android:paddingTop="10dp"
        android:text="@string/wlcome"
        android:textAlignment="center"
        android:textColor="#414040"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleText2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="72dp"
        android:background="#0033B5E5"
        android:paddingTop="10dp"
        android:text="@string/instrucation"
        android:textAlignment="center"
        android:textColor="#414040"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleText4"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="144dp"
        android:background="#0033B5E5"
        android:paddingTop="10dp"
        android:text="@string/statistics"
        android:textAlignment="center"
        android:textColor="#414040"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStatstics"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="188dp"
        android:background="#0033B5E5"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:textColor="#414040"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleText3"
        android:layout_width="2233dp"
        android:layout_height="31dp"
        android:layout_marginTop="116dp"
        android:background="#00796B"
        android:backgroundTint="#00796B"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:textColor="#414040"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageRock"
        android:layout_width="117dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="353dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="#00796B"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatstics"
        app:srcCompat="@drawable/rock"
        tools:srcCompat="@drawable/rock" />

    <ImageButton
        android:id="@+id/imagePaper"
        android:layout_width="114dp"
        android:layout_height="73dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="353dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="#00796B"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatstics"
        app:srcCompat="@drawable/paper" />

    <ImageButton
        android:id="@+id/imageScissors"
        android:layout_width="122dp"
        android:layout_height="73dp"
        android:layout_marginStart="284dp"
        android:layout_marginTop="353dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="#00796B"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatstics"
        app:srcCompat="@drawable/scissors" />

    <ImageView
        android:id="@+id/ivPlayerChoiche"
        android:layout_width="134dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:background="#00796B"
        android:backgroundTint="#00796B"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/ivComputerChoiche"
        android:layout_width="134dp"
        android:layout_height="107dp"
        android:layout_marginStart="260dp"
        android:background="#00796B"
        android:backgroundTint="#00796B"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paper" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="68dp"
        android:layout_height="24dp"
        android:layout_marginBottom="224dp"
        android:text="V.S."
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imagePaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvWinLoseMessage"
        android:layout_width="219dp"
        android:layout_height="60dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="40dp"
        android:text="@string/win_message"
        android:textColor="#00796B"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatstics" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="125dp"
        android:text="@string/you"
        android:textColor="#F80C0B0B"
        app:layout_constraintBottom_toTopOf="@+id/imageRock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayerChoiche" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="239dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="125dp"
        android:text="@string/computer"
        android:textColor="#F8E90909"
        app:layout_constraintBottom_toTopOf="@+id/imageScissors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>